# Coaxial-SCARA-Robot-Arm-Simulation-with-MuJoCo

./: CMakeLists.txt  LICENSE
include/: mujoco_viz.h
src/: main.cpp
xml/: 1st_arm.stl  2d_arm.stl  base.stl  base_stepper.stl  container.stl  robot.xml  steppers.stl  world.xml
xml/Nueva carpeta/: 1st_arm.scad  1st_arm.stl  20pulley.stl  2d_arm.scad  2d_arm.stl  40pulley.stl  625zz.stl  635zz.scad  635zz.stl  base.scad  box.scad  motor_shaft.scad  pulley.scad  pulley.stl  pulley_1st_motor.scad  pulley_1st_motor.stl  pulley_2d_motor.scad  pulley_2d_motor.stl  rigid_couple.scad  rigid_couple.stl
